Custom Class Implementation

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Profile - Ma. Elizabeth Gutierrez</title>
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet" href="/src/output.css">
   <style>
     h1, h2, p {
       transition: font-size 0.3s ease;
@@ -25,7 +25,7 @@
       </h1>
       <p 
         style="font-size: clamp(1.25rem, 3vw, 2rem);"
-        class="font-serif italic font-semibold tracking-wide leading-relaxed text-gray-700 underline underline-offset-4 decoration-blue-500 decoration-2 decoration-solid"
+        class="style1"
       >
         BSIT-3B
       </p>
@@ -56,12 +56,12 @@
        Goals
       </h2>
       <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-        <div class="bg-green-200 p-4 rounded-xl shadow text-center font-medium">Travel the world</div>
-        <div class="bg-green-200 p-4 rounded-xl shadow text-center font-medium">Cooking</div>
-        <div class="bg-green-200 p-4 rounded-xl shadow text-center font-medium">Reading Tech Blogs</div>
-        <div class="bg-green-200 p-4 rounded-xl shadow text-center font-medium">Sleeping 😴</div>
-        <div class="bg-green-200 p-4 rounded-xl shadow text-center font-medium">Watching Movies</div>
-        <div class="bg-green-200 p-4 rounded-xl shadow text-center font-medium">Watching Series</div>
+        <div class="style5">Travel the world</div>
+        <div class="style5">Cooking</div>
+        <div class="style5">Reading Tech Blogs</div>
+        <div class="style5">Sleeping 😴</div>
+        <div class="style5">Watching Movies</div>
+        <div class="style5">Watching Series</div>
       </div>
     </section>
 
@@ -73,18 +73,18 @@
         Things I Want To Do
       </h2>
       <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4">
-        <div class="bg-purple-200 p-4 rounded-xl shadow text-center font-medium">Travel the world</div>
-        <div class="bg-purple-200 p-4 rounded-xl shadow text-center font-medium">Build my own website</div>
-        <div class="bg-purple-200 p-4 rounded-xl shadow text-center font-medium">Save money for the future</div>
-        <div class="bg-purple-200 p-4 rounded-xl shadow text-center font-medium">Have my own house</div>
-        <div class="bg-purple-200 p-4 rounded-xl shadow text-center font-medium">Start my own business</div>
-        <div class="bg-purple-200 p-4 rounded-xl shadow text-center font-medium">Finish my studies</div>
-        <div class="bg-purple-200 p-4 rounded-xl shadow text-center font-medium">Have my own car</div>
-        <div class="bg-purple-200 p-4 rounded-xl shadow text-center font-medium">Support my family</div>
-        <div class="bg-purple-200 p-4 rounded-xl shadow text-center font-medium">Have more time to relax</div>
-        <div class="bg-purple-200 p-4 rounded-xl shadow text-center font-medium">Learn new skills</div>
-        <div class="bg-purple-200 p-4 rounded-xl shadow text-center font-medium">Get a job</div>
-        <div class="bg-purple-200 p-4 rounded-xl shadow text-center font-medium">Get a pet</div>
+        <div class="style4">Travel the world</div>
+        <div class="style4">Build my own website</div>
+        <div class="style4">Save money for the future</div>
+        <div class="style4">Have my own house</div>
+        <div class="style4">Start my own business</div>
+        <div class="style4">Finish my studies</div>
+        <div class="style4">Have my own car</div>
+        <div class="style4">Support my family</div>
+        <div class="style4">Have more time to relax</div>
+        <div class="style4">Learn new skills</div>
+        <div class="style4">Get a job</div>
+        <div class="style4">Get a pet</div>
       </div>
     </section>
 
